# XOpcodeCalc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md  THANKS.md  asm_defs.h  build_archpkg.sh  build_dpkg.sh  build_lin64.sh  build_mac.sh  build_msvc2026_x64.bat  build_msvc_win32.bat  build_msvc_win64.bat  build_msvc_winxp.bat  build_win32.bat  build_win64.bat  build_win_generic.cmd  build_winxp.bat  changelog.txt  configure  configure.ac  create_appimage.sh  global.h  install.iss  install.sh
DEBIAN/: control  xocalc.desktop
LINUX/: control  control_Debian_11  xocalc.desktop
asm/: CMakeLists.txt  asm.h  gcc32.s  gcc64.s  linux32_gcc.s  msvc32.asm  msvc64.asm  osx64_gcc.s  unix32_gcc.s  unix64_gcc.s  win32_msvc.asm  win64_msvc.asm
dep/Controls/: README.md  dialogbits8.cpp  dialogbits8.h  dialogbits8.ui  subclassofqstyleditemdelegate.cpp  subclassofqstyleditemdelegate.h  xabstracttableview.cmake  xabstracttableview.cpp  xabstracttableview.h  xabstracttableview.pri  xbinaryview.cmake  xbinaryview.cpp  xbinaryview.h  xbinaryview.pri  xcomboboxex.cmake  xcomboboxex.cpp  xcomboboxex.h  xcomboboxex.pri  xdatetimeeditx.cmake  xdatetimeeditx.cpp  xdatetimeeditx.h  xdatetimeeditx.pri  xdevicetableeditview.cpp  xdevicetableeditview.h  xdevicetableview.cpp  xdevicetableview.h  xheaderview.cpp  xheaderview.h  xhtml.cpp  xhtml.h  xhtml.pri  xlineedit_num.cpp  xlineedit_num.h  xlineedit_num_validator.cpp  xlineedit_num_validator.h  xlineedithex.cmake  xlineedithex.cpp  xlineedithex.h  xlineedithex.pri  xlineeditvalidator.cpp  (+27 more)
dep/Controls/XFControls/: xfcontrols.cmake  xfcontrols.pri  xfflagsdialog.cpp  xfflagsdialog.h  xflistdialog.cpp  xflistdialog.h  xfsizedialog.cpp  xfsizedialog.h  xfstringdialog.cpp  xfstringdialog.h  xftableview.cpp  xftableview.h  xftreeview.cpp  xftreeview.h  xfvaluedialog.cpp  xfvaluedialog.h
dep/Formats/: LICENSE  README.md  subdevice.cpp  subdevice.h  xbinary.cmake  xbinary.cpp  xbinary.h  xbinary.pri  xbinary_def.h  xdataconvertor.cmake  xdataconvertor.cpp  xdataconvertor.h  xdataconvertor.pri  xfmodel.cmake  xfmodel.cpp  xfmodel.h  xfmodel.pri  xfmodel_header.cpp  xfmodel_header.h  xfmodel_table.cpp  xfmodel_table.h  xformats.cmake  xformats.cpp  xformats.h  xformats.pri  xftree_model.cpp  xftree_model.h  xiodevice.cpp  xiodevice.h
dep/Formats/audio/: xmp3.cpp  xmp3.h  xmp3.pri  xwav.cpp  xwav.h  xwav.pri  xxm.cpp  xxm.h  xxm.pri
dep/Formats/example/: example_class.cpp  example_class.h  example_class.pri
dep/Formats/exec/: xamigahunk.cpp  xamigahunk.h  xamigahunk.pri  xamigahunk_def.h  xatarist.cmake  xatarist.cpp  xatarist.h  xatarist.pri  xatarist_def.h  xcom.cpp  xcom.h  xcom.pri  xcom_def.h  xelf.cpp  xelf.h  xelf.pri  xelf_def.h  xle.cpp  xle.h  xle.pri  xle_def.h  xmach.cpp  xmach.h  xmach.pri  xmach_def.h  xmsdos.cmake  xmsdos.cpp  xmsdos.h  xmsdos.pri  xmsdos_def.h  xne.cpp  xne.h  xne.pri  xne_def.h  xpe.cpp  xpe.h  xpe.pri  xpe_def.h
dep/Formats/formats/: xder.cmake  xder.cpp  xder.h  xder.pri  xdjvu.cmake  xdjvu.cpp  xdjvu.h  xdjvu.pri  xjavaclass.cpp  xjavaclass.h  xjavaclass.pri  xpyc.cpp  xpyc.h  xpyc.pri  xriff.cpp  xriff.h  xriff.pri  xttf.cpp  xttf.h  xttf.pri
dep/Formats/images/: xbmp.cpp  xbmp.h  xbmp.pri  xgif.cpp  xgif.h  xgif.pri  xicc.cmake  xicc.cpp  xicc.h  xicc.pri  xicon.cpp  xicon.h  xicon.pri  xjpeg.cpp  xjpeg.h  xjpeg.pri  xpng.h  (+8 more)
dep/Formats/xsimd/: CMakeLists.txt  xsimd.pri  xsimd.pro
dep/Formats/xsimd/src/: xsimd.c  xsimd.h  xsimd_avx2.c  xsimd_avx2.h  xsimd_sse2.c  xsimd_sse2.h
dep/Formats/xsimd/xsimd/: xsimd.pro
dep/Formats/xsimd/xsimd_avx2/: xsimd_avx2.pro
dep/Formats/xsimd/xsimd_sse2/: xsimd_sse2.pro
dep/XAboutWidget/: LICENSE  README.md  xaboutwidget.cmake  xaboutwidget.cpp  xaboutwidget.h  xaboutwidget.pri  xaboutwidget.ui
dep/XGithub/: README.md  xgithub.cmake  xgithub.cpp  xgithub.h  xgithub.pri
dep/XOptions/: README.md  dialogviewcolors.cpp  dialogviewcolors.h  dialogviewcolors.ui  xcolorstring.cpp  xcolorstring.h  xconsoloutput.cpp  xconsoloutput.h  xoptions.cmake  xoptions.cpp  xoptions.h  xoptions.pri  xoptionswidget.cmake  xoptionswidget.cpp  xoptionswidget.h  xoptionswidget.pri  xoptionswidget.ui  xprocesswatch.cpp  xprocesswatch.h  xthreadobject.cpp  xthreadobject.h
dep/XShortcuts/: LICENSE  README.md  dialogshortcuts.cpp  dialogshortcuts.h  dialogshortcuts.ui  xshortcuts.cmake  xshortcuts.cpp  xshortcuts.h  xshortcuts.pri  xshortcutsdialog.cpp  xshortcutsdialog.h  xshortcutsobject.cpp  xshortcutsobject.h  xshortcutstscrollarea.cpp  xshortcutstscrollarea.h  xshortcutswidget.cpp  xshortcutswidget.h
dep/XUpdate/: README.md  main.cpp  xupdate.cmake  xupdate.cpp  xupdate.h  xupdate.pri
dep/build_tools/: .clang-format  CREATE_TEST_CERT.bat  DISABLE_SECURE_BOOT.md  LICENSE  MACOS_NO_CERT.md  README.md  WINDOWS_BOOT_DEBUG.bat  WINDOWS_DRIVER_SIGNING.bat  WINDOWS_KERNEL_DEBUG.bat  enable_powershell.ps1  linux.sh  mac.sh  qt_static_build.ps1  windows.cmd
docs/: BUILD.md  RUN.md
gui_source/: CMakeLists.txt  bigint.h  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  gui_source.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  modevalidator.cpp  modevalidator.h
icons/: main.icns
images/thanks/: BJNFNE.json
packaging/debian/: build_dpkg.sh
packaging/macos/: build_mac.sh
packaging/windows/: build_portable_win32.bat  build_portable_win64.bat  build_portable_windows.cmd
res/: license.txt  readme.txt
res/linux/: xocalc.desktop.in
res/macos/: Info.plist
res/windows/: resource.rc  resource_icon.rc
run/: run_xocalc_qt5_msvc2019_32.cmd  run_xocalc_qt5_msvc2019_64.cmd  run_xocalc_windows.cmd
src/: CMakeLists.txt  asm_defs.h  cpufeatures.h  divisioncheck.h  global.h
src/asm/: CMakeLists.txt  asm.h  asm_c.cpp  asm_c.h  gcc32.s  gcc64.s  msvc32.asm  msvc64.asm
src/gui/: CMakeLists.txt  dialogabout.cpp  dialogabout.h  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp
src/tests/: CMakeLists.txt  main_test.cpp
(+27 files in other folders)
